# test_task_skypro

./: README.md  pyproject.toml
test_task/network/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
test_task/network/fixtures/: network.json
test_task/network/migrations/: 0001_initial.py  0002_alter_link_options_alter_network_options_and_more.py
test_task/test_task/: settings.py  urls.py
