[tool.poetry]
name = "test-task"
version = "0.1.0"
description = "Testwork for access to the 'Career center'"
authors = ["Aleksey Lesnikov"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
